# AI-Agents-Masterclass

./: main.ipynb  pyproject.toml
chatgpt-clone/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  dummy-agent.ipynb
content-pipeline-agent/: main.py
job-hunter-agent/: main.py  models.py  tools.py
job-hunter-agent/config/: tasks.yaml
job-hunter-agent/output/: company_research.md  interview_prep.md  rewritten_resume.md
my-first-agent/: main.ipynb
news-reader-agent/: main.py  pyproject.toml  tools.py
news-reader-agent/config/: agents.yaml  tasks.yaml
news-reader-agent/output/: content_harvest.md  final_report.md  final_report_ko.md  summary.md  summary_ko.md
