[project]
name = "my-first-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.98.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.5.1",
    "ipykernel>=6.30.0",
]

[tool.black]
target-version = ["py314"]
